# bostok-agents

./: .env.example  .gitignore  AGENTS.md  baslat.bat  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agents/: analyst.py  base.py  competitor_analyst.py  content.py  deploy.py  designer.py  developer.py  followup.py  inbox_watcher.py  instagram_agent.py  knowledge_agent.py  lead_scout.py  linkedin_agent.py  manager.py  marketing.py  qa.py  quote.py  whatsapp_agent.py
core/: ab_tracker.py  budget.py  campaign_state.py  campaigns.py  conversation.py  council.py  embedder.py  knowledge.py  lead_reflection.py  lead_state.py  llm_router.py  location_expander.py  memory.py  message_bus.py  monthly_wa_selector.py  performance_tracker.py  sector_kb.py  timezone_utils.py  user_profile.py  weekly_report.py
core/skills/: __init__.py  accessibility_checker.py  design_kb.py  (+15 more)
demo_site/: index.html
deploy/: auto_update.sh  bostok.service  env_template.txt  install_deps.sh  setup_gcloud.sh  setup_server.sh  upload.sh
integrations/: chamber_scraper.py  email_validator.py  gmail.py  gmail_reader.py  instagram_finder.py  instagram_scraper.py  lead_finder.py  linkedin_finder.py  netlify.py  overpass_finder.py  pexels_photos.py  seo_analyzer.py  site_hunter.py  telegram.py  tracking_server.py  tso_scraper.py  vercel.py  whatsapp.py  yelp_finder.py
memory/: bounced_emails.txt  demo_site_id.txt  sent_emails.txt  user_profile.json  vercel_site_url.txt
scripts/: auto_update.sh  start.sh  stop.sh
templates/: kurumsal.html  restoran.html
(+4 files in other folders)
