[project]
name = "bostok-agents"
version = "0.1.0"
description = "Bostok.dev Web Ajans Agent Köyü"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "google-generativeai>=0.8.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "keyring>=24.0.0",
    "python-dotenv>=1.0.0",
    "dnspython>=2.4.0",
    "python-whois>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
